--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -1,6 +1,6 @@
 channel_sources:
 - conda-forge,defaults
 channel_targets:
-- freecad main
+- freecad dev
 docker_image:
 - condaforge/linux-anvil-comp7
