--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,9 +8,11 @@ package:
 source:
   git_url: https://github.com/realthunder/FreeCAD_assembly3
   git_tag: master
+  patches:
+    - asm3_py3_diff.patch
 
 build:
-  number: 6
+  number: 7
   script: python -m pip install --no-deps --ignore-installed .
   noarch: python
 
